# kronos-agent-os

./: .dockerignore  .env.example  .env.nexus.example  .env.worker.example  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  agents.example.yaml  agents.yaml  docker-compose.yml  pyproject.toml  servers.example.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  repository.yml
aso/: __main__.py  graph.py  llm.py  pyproject.toml  runner.py  state.py
aso/config/: __init__.py  keywords.json
aso/nodes/: analyze.py  decide.py  evaluate.py  execute.py  measure.py  monitor.py  notify.py  plan.py  review.py  wait.py
aso/opportunities/: base.py  registry.py
aso/prompts/: __init__.py  analyst.md  evaluator.md  strategist.md
aso/tools/: app_store.py  apple_search_ads.py  competitor.py  keyword_tracker.py  play_store.py
dashboard/: auth.py  config.py  server.py
dashboard-ui/: README.md  package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md  AUTOMATIONS.md  CRON-JOBS.md  DASHBOARD.md  DEMO.md  DEPLOYMENT.md  DOCUMENTS-COLLECTOR.md  EDUCATION-REMINDERS.md  EXPENSES.md  LANDING.md  LAUNCH_COPY.md  LLM_PROVIDERS.md  MCP.md  MEMORY.md  OBSERVER.md  PERSONAL-OBSERVER-PLAYBOOK.md  PERSONAL_OPERATOR_DEMO.md  README.md  RELEASE_NOTES_v0.1.0.md  RUNTIME.md  SECURITY.md  SIGNAL-INTELLIGENCE-ROLLOUT.md  SIGNAL-SOURCE-CURATION.md  SKILLS.md  SOFT_LAUNCH.md  SWARM.md  SWARM_DEMO.md
kronos/: __init__.py  __main__.py  app.py  audit.py  bridge.py  bridge_approval.py  bridge_commands.py  bridge_context.py  bridge_media.py  bridge_topics.py  cli.py  config.py  db.py  demo_seed.py  discord_bridge.py  engine.py  evolution.py  graph.py  group_router.py  llm.py  llm_codex.py  persona.py  router.py  scheduled_tasks.py  session.py  state.py  swarm_store.py  telegram_client.py  tts.py  vision.py  workspace.py
scripts/: _common.sh  _log_resolver.sh  auth-userbot.py  cost-stats.sh  (+21 more)
(+435 files in other folders)
